--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,2 @@
-@use'variables' as v;
-body{
-    font-family: v.$fuente_principal;
-    background-color: v.$negro;
-}
+@forward 'base';
+@forward 'layout';
