--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -2,24 +2,24 @@
 
 @mixin telefono{
     @media (min-width: v.$telefono){
-        @content
+        @content;
     }
 }
 
 @mixin tablet{
     @media (min-width: v.$tablet){
-        @content
+        @content;
     }
 }
 
 @mixin desktop{
     @media (min-width: v.$telefono){
-        @content
+        @content;
     }
 }
 
 @mixin desktopXL{
     @media (min-width: v.$telefono){
-        @content
+        @content;
     }
 }
