_video ajuste video y contenido

--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -16,8 +16,8 @@ body{
     font-family: v.$fuente_principal;
     font-optical-sizing: auto;
     font-style: normal;
-    color: v.$blanco;
-    background-color: v.$negro;
+    color: v.$negro;
+    background-color: v.$blanco;
 }
 
 p{
