--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -13,13 +13,13 @@
 }
 
 @mixin desktop{
-    @media (min-width: v.$telefono){
+    @media (min-width: v.$desktop){
         @content;
     }
 }
 
 @mixin desktopXL{
-    @media (min-width: v.$telefono){
+    @media (min-width: v.$desktopXL){
         @content;
     }
 }
@@ -28,4 +28,16 @@
     width: 95%;
     max-width: 120rem;
     margin: 0 auto;
+}
+
+@mixin grid($columns:1, $grid:2rem){
+    display: grid;
+    grid-template-columns: repeat($columns, 1fr);
+    gap: $grid;
+}
+
+@mixin resetear-lista{
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
