--- a/src/scss/layout/_festival.scss
+++ b/src/scss/layout/_festival.scss
@@ -3,4 +3,27 @@
 
 .sobre-festival{
     @include m.contenedor;
+
+    @include m.tablet{
+        @include m.grid(2, 5rem);
+    }
+
+}
+.contenido-festival{
+    margin-top: 5rem;
+    h2{
+        margin-bottom: 2rem;
+    }   
+    .fecha{
+        color: v.$verde;
+        font-weight: 700;
+    }
+
+    @include m.tablet{
+        margin-top: 0;
+    }
+
+    @include m.desktop{
+        margin-top: 5rem;
+    }
 }
