--- a/src/scss/layout/_video.scss
+++ b/src/scss/layout/_video.scss
@@ -1,6 +1,6 @@
 @use 'base/mixins' as m;
-@use 'sass:color';
 @use 'base/variables' as v;
+@use 'sass:color';
 
 .video{   
     position: relative;
@@ -13,7 +13,7 @@
        background: linear-gradient(
         270deg,
         rgba(v.$morado, 60%),
-        rgba(v.$negro, 80%)
+        rgba(color.adjust(v.$morado, $lightness:-20%), 80%)
        );
         display: flex;
         align-items: center;
