--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -19,6 +19,10 @@ body{
     color: v.$negro;
     background-color: v.$blanco;
     font-size: 2rem;
+
+    &.overflow-hidden{
+        overflow: hidden;
+    }
 }
 
 p{
